# GameOfLife

./: .gitignore  CMakeLists.txt  README.md
examples/: Life1.life
include/: commandLineParser.h  gameConfigReader.h  gameState.h  gameView.h  mainProcess.h  stateProcessor.h
include/controller/: gameController.h
include/game_strategy/: gameContext.h  gameStrategy.h  offlineStrategy.h  onlineStrategy.h
include/model/: gameState.h  menuModel.h  observable.h  stateProcessor.h
include/view/: gameView.h  menuView.h  observer.h
src/: commandLineParser.cpp  gameConfigReader.cpp  gameState.cpp  gameView.cpp  main.cpp  mainProcess.cpp  stateProcessor.cpp
src/controller/: gameController.cpp
src/game_strategy/: gameContext.cpp  gameStrategy.cpp  offlineStrategy.cpp  onlineStrategy.cpp
src/model/: gameState.cpp  menuModel.cpp  stateProcessor.cpp
src/view/: gameView.cpp  menuView.cpp
